--- a/apiinfo.html
+++ b/apiinfo.html
@@ -9,10 +9,28 @@
 
 <body>
     <h1>API для чата</h1>
+
+    <p>Для передачи данных между браузером и сервером используется формат <a href="https://ru.wikipedia.org/wiki/JSON">JSON</a></p>
+
     <h3>Получить последние 10 сообщений:</h3>
 
     <code>GET http://user08.test1.seschool.ru:3000/api/chat/</code>
 
+    <p>Просмотреть формат вывода данного узла можно по этой ссылке:</p>
+
+    <a href="http://user08.test1.seschool.ru:3000/api/chat/">http://user08.test1.seschool.ru:3000/api/chat/</a>
+
+    <h3>Получить произвольное количество сообщений (используются параметры запроса в URL):</h3>
+
+    <code>GET http://user08.test1.seschool.ru:3000/api/chat/?offset=5&limit=7</code>
+    
+    <p>В данном случае мы пропускаем последние 5 сообщений (параметр offset) и берем последние 7 сообщений (параметр limit), предшествующие пропущенным 5 сообщениям. Данный запрос будет полезен для загрузки необходимого количества сообщений или для постепенной дозагрузки сообщений при прокрутке окна чата.</p>
+
+    <p>Просмотреть формат вывода данного узла можно по этой ссылке:</p>
+
+    <a href="http://user08.test1.seschool.ru:3000/api/chat/?offset=5&limit=7">http://user08.test1.seschool.ru:3000/api/chat/?offset=5&limit=7</a>
+
+    
     <h3>Отправить сообщение в чат:</h3>
     <p>TOKEN для отправки сообщений можно получить у преподавателя. TOKEN используется для безопасности, чтобы никто посторонний не мог забить БД.</p>
 
